Cleaned up some test declaration logic; added start to perf autoring readme

--- a/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
@@ -42,6 +42,6 @@ rustc_version.workspace = true
 workspace = true
 
 [[test]]
-name = "performance_tests"
+name = "perf"
 path = "perf/get_secret.rs"
 harness = false
