--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -39,6 +39,6 @@ tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
 
 [[test]]
-name = "performance_tests"
+name = "perf"
 path = "perf/perf_tests.rs"
 harness = false
