Initial performance test infrastructure (#3110)
This PR adds the start of performance test infrastructure for the Rust
SDK.

This support is not complete, but it does provide a mechanism to measure
the performance of SDK client operations.

It also defines a performance test for the KeyVault get_secrets API and
the Storage Blobs list_blobs API which match the tests which exist for
the C++ SDK.

--- a/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
@@ -40,3 +40,8 @@ rustc_version.workspace = true
 
 [lints]
 workspace = true
+
+[[test]]
+name = "perf"
+path = "perf/get_secret.rs"
+harness = false
