--- a/sdk/storage/perf.yml
+++ b/sdk/storage/perf.yml
@@ -36,3 +36,13 @@ extends:
     EnvVars:
       # This is set in the InstallLanguageSteps
       VCPKG_BINARY_SOURCES_SECRET: $(VCPKG_BINARY_SOURCES_SECRET)
+
+trigger:
+  branches:
+    include:
+    - main
+    - hotfix/*
+    - release/*
+  paths:
+    include:
+    - sdk/storage/
