Converted keyvault keys to new perf framework

--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -45,3 +45,8 @@ workspace = true
 [[bench]]
 name = "benchmarks"
 harness = false
+
+[[test]]
+name = "perf"
+path = "perf/perf_tests.rs"
+harness = false
