--- a/sdk/keyvault/azure_security_keyvault_keys/perf.yml
+++ b/sdk/keyvault/azure_security_keyvault_keys/perf.yml
@@ -1,3 +1,16 @@
+trigger: none
+
+pr: none
+
+# Schedule the pipeline to run at UTC+7 Hours (Midnight Pacific time)
+schedules:
+- cron: "0 7 * * *"
+  displayName: Daily midnight run.
+  branches:
+    include:
+    - main
+  always: true
+
 parameters:
 - name: PackageVersions
   displayName: PackageVersions (regex of package versions to run)
