match C++ test config

--- a/sdk/keyvault/azure_security_keyvault_secrets/perf-tests.yml
+++ b/sdk/keyvault/azure_security_keyvault_secrets/perf-tests.yml
@@ -9,5 +9,4 @@ Tests:
   - Test: get_secret
     Class: get_secret
     Arguments:
-      - --sync
-      - --parallel 64 --sync
+      - --parallel 4
