Adjusted start time for storage pipeline

--- a/sdk/storage/azure_storage_blob/perf.yml
+++ b/sdk/storage/azure_storage_blob/perf.yml
@@ -2,8 +2,9 @@ trigger: none
 
 pr: none
 
+# Schedule the pipeline to run at UTC+7 Hours (Midnight Pacific time)
 schedules:
-- cron: "0 0 * * *"
+- cron: "0 7 * * *"
   displayName: Daily midnight build
   branches:
     include:
