Add JSON vs. XML deserialization benchmark

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -97,5 +97,10 @@ name = "benchmarks"
 harness = false
 
 [[bench]]
+name = "deserialization"
+harness = false
+required-features = ["xml"]
+
+[[bench]]
 name = "http_transport_benchmarks"
 harness = false
