--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -14,7 +14,7 @@ parameters:
 - name: release_azure_identity
   displayName: 'azure_identity'
   type: boolean
-  default: true
+  default: false
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
