--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -14,7 +14,7 @@ parameters:
 - name: release_azure_data_cosmos
   displayName: 'azure_data_cosmos'
   type: boolean
-  default: true
+  default: false
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
