--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -10,21 +10,33 @@ trigger:
     include:
     - sdk/core/
 
-parameters:
+parameters: 
+- name: typespec
+  displayName: typespec
+  type: boolean
+  default: false
+- name: typespec_macros
+  displayName: typespec_macros
+  type: boolean
+  default: false
+- name: typespec_client_core
+  displayName: typespec_client_core
+  type: boolean
+  default: false
 - name: release_azure_core
-  displayName: 'azure_core'
+  displayName: azure_core
   type: boolean
   default: false
 - name: release_azure_core_macros
-  displayName: 'azure_core_macros'
+  displayName: azure_core_macros
   type: boolean
   default: false
 - name: release_azure_core_amqp
-  displayName: 'azure_core_amqp'
+  displayName: azure_core_amqp
   type: boolean
   default: false
 - name: release_azure_core_opentelemetry
-  displayName: 'azure_core_opentelemetry'
+  displayName: azure_core_opentelemetry
   type: boolean
   default: false
 
@@ -34,16 +46,16 @@ extends:
     ServiceDirectory: core
     Artifacts:
     - name: typespec
-      safeName: Typespec
+      releaseInBatch: ${{ parameters.typespec }}
     - name: typespec_macros
-      safeName: TypespecMacros
+      releaseInBatch: ${{ parameters.typespec_macros }}
     - name: typespec_client_core
-      safeName: TypespecClientCore
+      releaseInBatch: ${{ parameters.typespec_client_core }}
     - name: azure_core
-      releaseInBatch: ${{ parameters.release_azure_core }}
+      releaseInBatch: ${{ parameters.azure_core }}
     - name: azure_core_macros
-      releaseInBatch: ${{ parameters.release_azure_core_macros }}
+      releaseInBatch: ${{ parameters.azure_core_macros }}
     - name: azure_core_amqp
-      releaseInBatch: ${{ parameters.release_azure_core_amqp }}
+      releaseInBatch: ${{ parameters.azure_core_amqp }}
     - name: azure_core_opentelemetry
-      releaseInBatch: ${{ parameters.release_azure_core_opentelemetry }}
+      releaseInBatch: ${{ parameters.azure_core_opentelemetry }}
