--- a/sdk/eventhubs/ci.yml
+++ b/sdk/eventhubs/ci.yml
@@ -12,11 +12,11 @@ trigger:
 
 parameters:
 - name: release_azure_messaging_eventhubs
-  displayName: 'azure_messaging_eventhubs'
+  displayName: azure_messaging_eventhubs
   type: boolean
   default: false
 - name: release_azure_messaging_eventhubs_checkpointstore_blob
-  displayName: 'azure_messaging_eventhubs_checkpointstore_blob'
+  displayName: azure_messaging_eventhubs_checkpointstore_blob
   type: boolean
   default: false
 
