--- a/sdk/storage/ci.yml
+++ b/sdk/storage/ci.yml
@@ -11,19 +11,19 @@ trigger:
 
 parameters:
 - name: RunLiveTests
-  displayName: 'Run live tests'
+  displayName: Run live tests
   type: boolean
   default: false
 - name: release_azure_storage_common
-  displayName: 'azure_storage_common'
+  displayName: azure_storage_common
   type: boolean
   default: false
 - name: release_azure_storage_blob
-  displayName: 'azure_storage_blob'
+  displayName: azure_storage_blob
   type: boolean
   default: false
 - name: release_azure_storage_queue
-  displayName: 'azure_storage_queue'
+  displayName: azure_storage_queue
   type: boolean
   default: false
 
