--- a/sdk/canary/azure_canary_core/Cargo.toml
+++ b/sdk/canary/azure_canary_core/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+azure_core = { workspace = true }
 
 [dev-dependencies]
 azure_canary.path = "../azure_canary"
