--- a/eng/pipelines/templates/jobs/pack.yml
+++ b/eng/pipelines/templates/jobs/pack.yml
@@ -69,31 +69,37 @@ jobs:
   - ${{ else }}:
     - pwsh: |
         $artifacts = '${{ convertToJson(parameters.Artifacts) }}' | ConvertFrom-Json
-        $requireDependencies = $true
+        $isReleaseBuild = $true
         $artifactsToBuild = $artifacts | Where-Object { $_.releaseInBatch -eq 'True' }
 
         if (!$artifactsToBuild) {
           Write-Host "No packages to release. Building all packages in the service directory with no dependency validation."
           $artifactsToBuild = $artifacts
-          $requireDependencies = $false
+          $isReleaseBuild = $false
         }
 
         $packageNames = $artifactsToBuild.name
 
-        if ($requireDependencies) {
-          Write-Host "Building crates with dependency validation for release"
-          & $(Build.SourcesDirectory)/eng/scripts/Pack-ReleaseCrates.ps1 `
-            -OutputPath '$(Build.ArtifactStagingDirectory)' `
-            -PackageNames $packageNames `
-            -OutBuildOrderFile '$(Build.ArtifactStagingDirectory)/release-order.json'
+        Write-Host "##vso[task.setvariable variable=PackageNames]$($packageNames -join ',')"
+        if ($isReleaseBuild) {
+          Write-Host "##vso[task.setvariable variable=AdditionalPackageParams]-Release"
         } else {
-          Write-Host "Building crates without validating dependencies"
-          & $(Build.SourcesDirectory)/eng/scripts/Pack-Crates.ps1 `
-            -OutputPath '$(Build.ArtifactStagingDirectory)' `
-            -PackageNames $packageNames
+          Write-Host "##vso[task.setvariable variable=AdditionalPackageParams]"
         }
+      displayName: Configure crate packing
+      condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+
+    - task: Powershell@2
       displayName: Pack Crates
       condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+      inputs:
+        pwsh: true
+        filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Crates.ps1
+        arguments: >
+          -OutputPath '$(Build.ArtifactStagingDirectory)'
+          -PackageNames $(PackageNames)
+          $(AdditionalPackageParams)
+
 
   - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
     parameters:
