--- a/eng/pipelines/templates/jobs/pack.yml
+++ b/eng/pipelines/templates/jobs/pack.yml
@@ -98,6 +98,7 @@ jobs:
         arguments: >
           -OutputPath '$(Build.ArtifactStagingDirectory)'
           -PackageNames $(PackageNames)
+          -OutBuildOrderFile '$(Build.ArtifactStagingDirectory)/release-order.json'
           $(AdditionalPackageParams)
 
 
