Add JSON, XML mock perf tests for azure_core
Uses a mock transport to more accurately test the pipeline and deserialization.

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -104,3 +104,8 @@ required-features = ["xml"]
 [[bench]]
 name = "http_transport_benchmarks"
 harness = false
+
+[[test]]
+name = "perf"
+path = "perf/perf.rs"
+harness = false
